--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -93,21 +93,8 @@
               </td>
               <td class='custom-table-cell'>
                 <div class="p-d-flex p-align-center">
+                  
                   <div class="p-d-flex p-align-center" *ngIf="(!findTraceLogForTool(processor.processorName)?.executionOngoing && processor.processorName === 'Jira') || processor.processorName !== 'Jira'">
-                    <div class="tooltip-warning p-mr-1" *ngIf="dataMismatchObj[processor.processorName]">
-                      <i class="fas fa-exclamation-triangle ico-warning">
-                      </i>
-                      <div class="tooltiptext">
-                        <ul class="p-mt-0 p-pr-1">
-                          <li class="tooltip-item">
-                            <b>Warning:</b> There are some Jira issues that no longer satisfy your Scrum board's JQL condition. This could be due to changes in JQL query or changes in the Jira issue fields.
-                          </li>
-                          <li class="tooltip-item">
-                            <b>Suggested Action:</b> Delete your Jira processor in Misc Settings and click on "Run Now" to rectify past sprint data.
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
                     <div *ngIf="showProcessorLastState(processor.processorName) !== 'NA'" class="status-container"
                       [ngClass]="showProcessorLastState(processor.processorName) === 'Success' ? 'active' : 'inactive'">
                       {{ showProcessorLastState(processor.processorName)}}
@@ -117,6 +104,20 @@
                 <div class="p-ml-2" *ngIf="processor.processorName === 'Jira'">
                   <i class="pi pi-info-circle" [ngClass]="{'disabled': !(findTraceLogForTool('Jira')?.progressStatusList?.length || findTraceLogForTool('Jira')?.errorMessage)}"
                   (click)="(findTraceLogForTool('Jira')?.errorMessage || findTraceLogForTool('Jira')?.progressStatusList?.length) ? op.toggle($event) : ''" style="font-size: 1.2rem"></i>
+                </div>
+                <div class="tooltip-warning p-ml-1 p-mr-1" *ngIf="dataMismatchObj[processor.processorName]">
+                  <i class="fas fa-exclamation-triangle ico-warning">
+                  </i>
+                  <div class="tooltiptext">
+                    <ul class="p-mt-0 p-pr-1">
+                      <li class="tooltip-item">
+                        <b>Warning:</b> There are some Jira issues that no longer satisfy your Scrum board's JQL condition. This could be due to changes in JQL query or changes in the Jira issue fields.
+                      </li>
+                      <li class="tooltip-item">
+                        <b>Suggested Action:</b> Delete your Jira processor in Misc Settings and click on "Run Now" to rectify past sprint data.
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
               </td>
