--- a/UI/src/app/component/chart-with-filters/chart-with-filters.component.css
+++ b/UI/src/app/component/chart-with-filters/chart-with-filters.component.css
@@ -13,7 +13,8 @@
     font-size: 12px;
 }
 
-#legend table th, td {
+#legend table th,
+td {
     text-align: left;
     height: 20px;
     padding: 5px;
@@ -66,4 +67,36 @@
     border: 2px solid #EAEDF0;
 }
 
+:host ::ng-deep .filter-btn {
+    background-color: #fff;
+    color: inherit;
+    border: 1px solid #333333;
+    height: 30px;
+    font-size: 10px;
+}
+
+:host ::ng-deep .p-multiselect .p-multiselect-label {
+    padding: 10px;
+}
+
 /** Primeng style overrides end **/
+
+.min-ht {
+    min-height: 250px;
+    position: relative;
+}
+
+.no-data {
+    position: absolute;
+    top: 0 !important;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: fit-content;
+    padding: 10px;
+    font-size: 13px;
+    height: 40px;
+    text-align: center;
+    background-color: #dedede;
+    margin: auto;
+}
