added a  check for filter1

--- a/UI/src/app/dashboard/milestone/milestone.component.html
+++ b/UI/src/app/dashboard/milestone/milestone.component.html
@@ -149,7 +149,7 @@
                           </ng-template>
                           <ng-template #zeroData let-data>
                             <div class="min-ht">
-                              <div class="no-data">No Data {{ data.filter1 ? 'for ' + data.filter1[0] : '' }}</div>
+                              <div class="no-data">No Data {{ data?.filter1 ? 'for ' + data?.filter1[0] : '' }}</div>
                             </div>
                           </ng-template>
                           <ng-template #noData>
@@ -308,7 +308,7 @@
                           </ng-template>
                           <ng-template #zeroData let-data>
                             <div class="min-ht">
-                              <div class="no-data">No Data {{ data.filter1 ? 'for ' + data.filter1[0] : '' }}</div>
+                              <div class="no-data">No Data {{ data?.filter1 ? 'for ' + data?.filter1[0] : '' }}</div>
                             </div>
                           </ng-template>
                           <ng-template #noData>
@@ -467,7 +467,7 @@
                           </ng-template>
                           <ng-template #zeroData let-data>
                             <div class="min-ht">
-                              <div class="no-data">No Data {{ data.filter1 ? 'for ' + data.filter1[0] : '' }}</div>
+                              <div class="no-data">No Data {{ data?.filter1 ? 'for ' + data?.filter1[0] : '' }}</div>
                             </div>
                           </ng-template>
                           <ng-template #noData>
@@ -633,7 +633,7 @@
                           </ng-template>
                           <ng-template #zeroData let-data>
                             <div class="min-ht">
-                              <div class="no-data">No Data {{ data.filter1 ? 'for ' + data.filter1[0] : '' }}</div>
+                              <div class="no-data">No Data {{ data?.filter1 ? 'for ' + data?.filter1[0] : '' }}</div>
                             </div>
                           </ng-template>
                           <ng-template #loader>
