--- a/UI/src/app/component/chart-with-filters/chart-with-filters.component.html
+++ b/UI/src/app/component/chart-with-filters/chart-with-filters.component.html
@@ -5,29 +5,36 @@
     <p-button label="Apply Filters" icon="pi pi-filter" styleClass="filter-btn" (click)="op.toggle($event)"></p-button>
   </div>
   <p-overlayPanel #op>
-    <ng-template pTemplate>
-      Select what you want to filter by: &nbsp;
-      <p-multiSelect [style]="{'min-width':'200px', 'height':'40px'}" [options]="filters?.filterGroup2" optionLabel="filterName"
-        [(ngModel)]="selectedFilter2"></p-multiSelect>
-      <table *ngIf="selectedFilter2?.length">
-        <tbody>
-          <tr *ngFor="let filter of selectedFilter2; let i = index;">
-            <td *ngIf="filter">{{ filter?.filterKey }} </td>
-            <td *ngIf="filter"><div style="background-color: #F6F6F6; width: 100%;text-align: center;padding: 5px;">{{ filter?.filterType === 'Single' ? '=' : 'contains' }}</div></td>
-            <td *ngIf="filter">
-              <p-multiSelect [style]="{'min-width':'200px', 'height':'40px'}" *ngIf="filter?.filterType !== 'Single'" [options]="filter?.values" [(ngModel)]="filter.selectedValue" (onChange)="additionalFilterChanged()"></p-multiSelect>
-              <p-dropdown [style]="{'min-width':'200px', 'height':'40px'}" [autoDisplayFirst]="false" *ngIf="filter?.filterType === 'Single'" [options]="filter?.values" [(ngModel)]="filter.selectedValue" (onChange)="additionalFilterChanged()"></p-dropdown>
-            </td>
-            <td *ngIf="filter">
-              <i class="pi pi-filter-slash" (click)="clearFilter(i)"></i>
-            </td>
-        </tbody>
-      </table>
-      <div>
-        <p-button label="Filter" [disabled]="!selectedFilter2?.length" (click)="applyAdditionalFilters()" [style]="{'background-color':'#fff', 'color': '#333333', 'border': '1px solid #333333', 'height': '30px', 'font-size': '10px'}"></p-button>
-        <p-button label="Reset" (click)="clearAdditionalFilters()" [style]="{'margin-left': '15px','background-color':'#fff', 'color': '#333333', 'border': '1px solid #333333', 'height': '30px', 'font-size': '10px'}"></p-button>
-      </div>
-    </ng-template>
+    Select what you want to filter by: &nbsp;
+    <p-multiSelect [style]="{'min-width':'200px', 'height':'40px'}" [options]="filters?.filterGroup2"
+      optionLabel="filterName" [(ngModel)]="selectedFilter2"></p-multiSelect>
+    <table *ngIf="selectedFilter2?.length">
+      <tbody>
+        <tr *ngFor="let filter of selectedFilter2; let i = index;">
+          <td *ngIf="filter" style="font-size: 12px;">{{ filter?.filterKey }} </td>
+          <td *ngIf="filter">
+            <div style="background-color: #F6F6F6; width: 100%;text-align: center;padding: 5px;">{{ filter?.filterType
+              === 'Single' ? '=' : 'contains' }}</div>
+          </td>
+          <td *ngIf="filter" style="font-size: 12px !important;">
+            <p-multiSelect [style]="{'min-width':'200px', 'height':'40px', 'font-size': '12px'}"
+              [panelStyle]="{'font-size': '12px'}" *ngIf="filter?.filterType !== 'Single'" [options]="filter?.values"
+              [(ngModel)]="filter.selectedValue" (onChange)="additionalFilterChanged()"></p-multiSelect>
+            <p-dropdown [style]="{'min-width':'200px', 'height':'40px', 'font-size': '12px'}" [autoDisplayFirst]="false"
+              [panelStyle]="{'font-size': '12px'}" *ngIf="filter?.filterType === 'Single'" [options]="filter?.values"
+              [(ngModel)]="filter.selectedValue" (onChange)="additionalFilterChanged()"></p-dropdown>
+          </td>
+          <td *ngIf="filter">
+            <i class="pi pi-filter-slash" (click)="clearFilter(i)"></i>
+          </td>
+      </tbody>
+    </table>
+    <div>
+      <p-button label="Filter" [disabled]="!selectedFilter2?.length" (click)="applyAdditionalFilters()"
+        [style]="{'background-color':'#fff', 'color': '#333333', 'border': '1px solid #333333', 'height': '30px', 'font-size': '10px'}"></p-button>
+      <p-button label="Reset" (click)="clearAdditionalFilters()"
+        [style]="{'margin-left': '15px','background-color':'#fff', 'color': '#333333', 'border': '1px solid #333333', 'height': '30px', 'font-size': '10px'}"></p-button>
+    </div>
   </p-overlayPanel>
   <div class="p-d-flex p-jc-between" *ngIf="modifiedData?.length">
     <div id="legend">
@@ -35,9 +42,9 @@
         <thead>
           <tr>
             <th></th>
-            <th>{{selectedMainFilter.filterKey}}</th>
+            <th>{{selectedMainFilter.filterKey}} </th>
             <th>Count</th>
-            <th>%age</th>
+            <th>%</th>
           </tr>
         </thead>
         <tbody>
@@ -46,7 +53,8 @@
               <div class="color_indicator" [ngStyle]="{'background-color': item.color}"></div>
             </td>
             <td>
-              <span (click)="exploreData(item.key)" style="cursor: pointer;">{{ item.key }}</span>
+              <span (click)="exploreData(item.key)" style="cursor: pointer;">{{ item.key }} <i
+                  class="pi pi-angle-double-down"></i></span>
             </td>
             <td>{{ item.value }}</td>
             <td>{{ item.percentage }}</td>
