--- a/UI/src/app/component/chart-with-filters/chart-with-filters.component.css
+++ b/UI/src/app/component/chart-with-filters/chart-with-filters.component.css
@@ -33,7 +33,7 @@ td {
     background-color: #EAEDF0;
     color: #5D6670;
     font-size: 10px;
-    font-family: Poppins_Regular, sans-serif;
+    font-family: inherit;
     height: 30px;
     border: 2px solid #EAEDF0;
     border-radius: 8px !important;
