--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -105,20 +105,6 @@
                   <i class="pi pi-info-circle" [ngClass]="{'disabled': !(findTraceLogForTool('Jira')?.progressStatusList?.length || findTraceLogForTool('Jira')?.errorMessage)}"
                   (click)="(findTraceLogForTool('Jira')?.errorMessage || findTraceLogForTool('Jira')?.progressStatusList?.length) ? op.toggle($event) : ''" style="font-size: 1.2rem"></i>
                 </div>
-                <div class="tooltip-warning p-ml-1 p-mr-1" *ngIf="dataMismatchObj[processor.processorName]">
-                  <i class="fas fa-exclamation-triangle ico-warning">
-                  </i>
-                  <div class="tooltiptext">
-                    <ul class="p-mt-0 p-pr-1">
-                      <li class="tooltip-item">
-                        <b>Warning:</b> There are some Jira issues that no longer satisfy your Scrum board's JQL condition. This could be due to changes in JQL query or changes in the Jira issue fields.
-                      </li>
-                      <li class="tooltip-item">
-                        <b>Suggested Action:</b> Delete your Jira processor in Misc Settings and click on "Run Now" to rectify past sprint data.
-                      </li>
-                    </ul>
-                  </div>
-                </div>
               </div>
               </td>
               <td class='custom-table-cell p-d-flex p-align-center column-width'>
@@ -153,7 +139,7 @@
 <p-overlayPanel #op [showCloseIcon]="false">
   <div class="progress-dialog-body p-mb-4">
       <p-table [value]="findTraceLogForTool('Jira')?.progressStatusList" [tableStyle]="{ 'min-width': '40rem' }"
-       [scrollable]="true" scrollHeight="300px" *ngIf="findTraceLogForTool('Jira')?.progressStatusList?.length && !(findTraceLogForTool('Jira')?.errorMessage) ; else logError">
+       [scrollable]="true" scrollHeight="200px" *ngIf="findTraceLogForTool('Jira')?.progressStatusList?.length && !(findTraceLogForTool('Jira')?.errorMessage) ; else logError">
         <ng-template pTemplate="header">
             <tr>
               <th>Step Name</th>
@@ -173,5 +159,15 @@
     <ng-template #logError>
       <h3 class="p-text-center" class="error-text"><img src="../../../assets/img/icon-failure.svg" alt="Failure" class="p-mr-1" />{{ findTraceLogForTool('Jira')?.errorMessage}}</h3>
     </ng-template>
+    <ul class="p-mt-0 p-pr-1 p-pl-0 p-list-style-none" *ngIf="dataMismatchObj['Jira']">
+      <li class="tooltip-item p-d-flex p-pt-2">
+        <i class="fas fa-exclamation-triangle text-yellow p-mr-1 icon-list"></i> 
+        There are some Jira issues that no longer satisfy your Scrum board's JQL condition. This could be due to changes in JQL query or changes in the Jira issue fields.
+      </li>
+      <li class="tooltip-item p-d-flex p-pt-2">
+        <i class="fas fa-lightbulb text-green p-mr-3 icon-list"></i>
+        Delete your Jira processor in Misc Settings and click on "Run Now" to rectify past sprint data.
+      </li>
+    </ul>
   </div>
 </p-overlayPanel>
