--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -159,14 +159,23 @@
     <ng-template #logError>
       <h3 class="p-text-center" class="error-text"><img src="../../../assets/img/icon-failure.svg" alt="Failure" class="p-mr-1" />{{ findTraceLogForTool('Jira')?.errorMessage}}</h3>
     </ng-template>
-    <ul class="p-mt-0 p-pr-1 p-pl-0 p-list-style-none" *ngIf="dataMismatchObj['Jira']">
+    <ul class="p-pr-1 p-pl-0 list-style-none" *ngIf="dataMismatchObj['Jira']">
       <li class="tooltip-item p-d-flex p-pt-2">
-        <i class="fas fa-exclamation-triangle text-yellow p-mr-1 icon-list"></i> 
-        There are some Jira issues that no longer satisfy your Scrum board's JQL condition. This could be due to changes in JQL query or changes in the Jira issue fields.
+        <div class="icon-container">
+          <i class="fas fa-exclamation-triangle text-yellow icon-list"></i>
+        </div>
+        <div>
+          There are some Jira issues that no longer satisfy your Scrum board's JQL condition.
+          This could be due to changes in JQL query or changes in the Jira issue fields.
+        </div>
       </li>
       <li class="tooltip-item p-d-flex p-pt-2">
-        <i class="fas fa-lightbulb text-green p-mr-3 icon-list"></i>
-        Delete your Jira processor in Misc Settings and click on "Run Now" to rectify past sprint data.
+        <div class="icon-container">
+          <i class="fas fa-bolt text-green icon-list"></i>
+        </div>
+        <div>
+          Delete your Jira processor in Misc Settings and click on "Run Now" to rectify past sprint data.
+        </div>
       </li>
     </ul>
   </div>
